Added in background image of records.png.

--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,5 +1,15 @@
+body {
+    background-image: url("record.png");
+    /* could also be written as background-image: url("../assignment/record.png"); */
+    /* However, this feels unecessary based on the fact that we are already in the correct folder/directory. */
+}
+
 header {
     background-color: darkblue;
     color: skyblue;
     text-align: center;
+}
+
+main {
+    background-color: lightgrey;
 }
